--- a/api-discovery-lab/package.json
+++ b/api-discovery-lab/package.json
@@ -20,16 +20,16 @@
     "author": "Tu nombre",
     "license": "MIT",
     "dependencies": {
-        "axios": "^1.4.0",
-        "cheerio": "^1.0.0-rc.12",
-        "commander": "^11.0.0",
+        "axios": "^1.9.0",
+        "cheerio": "^1.0.0",
+        "commander": "^14.0.0",
         "colors": "^1.4.0",
-        "fs-extra": "^11.1.0",
-        "puppeteer": "^20.0.0",
-        "ws": "^8.13.0"
+        "fs-extra": "^11.3.0",
+        "puppeteer": "^24.10.0",
+        "ws": "^8.18.2"
     },
     "devDependencies": {
-        "eslint": "^8.40.0",
-        "prettier": "^2.8.8"
+        "eslint": "^9.28.0",
+        "prettier": "^3.5.3"
     }
 }
