--- a/api-discovery-lab/package.json
+++ b/api-discovery-lab/package.json
@@ -25,8 +25,10 @@
         "colors": "^1.4.0",
         "commander": "^14.0.0",
         "fs-extra": "^11.3.0",
+        "playwright": "^1.52.0",
         "puppeteer": "^24.10.0",
-        "ws": "^8.18.2"
+        "ws": "^8.18.2",
+        "xml2js": "^0.6.2"
     },
     "devDependencies": {
         "eslint": "^9.28.0",
